<resources>
    <string name="app_name">Diary</string>
    <string name="add">추가</string>
    <string name="save">저장</string>
    <string name="title">제목</string>
    <string name="content">내용</string>
    <string name="date">날짜</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="sort">정렬</string>
    <string name="sort_new">최신순</string>
    <string name="sort_old">오래된순</string>
    <string name="empty">작성된 일기가 없습니다.</string>


    <string name="search_hint">제목/내용 검색</string>
    <string name="menu_pin">PIN 설정</string>
    <string name="menu_lock">앱 잠금</string>
    <string name="secret">비밀글</string>
    <string name="pin_enter">PIN 입력</string>
    <string name="pin_set">새 PIN 설정</string>
    <string name="pin_change">PIN 변경</string>
    <string name="pin_confirm">확인</string>
    <string name="pin_cancel">취소</string>
    <string name="pin_wrong">PIN이 올바르지 않습니다</string>
</resources>