<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/action_add"
        android:title="@string/add"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="ifRoom|withText"/>


    <item android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="ifRoom|withText"/>


    <item android:id="@+id/action_search"
        android:title="Search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"/>


    <item android:id="@+id/action_pin"
        android:title="@string/menu_pin"
        android:icon="@android:drawable/ic_lock_idle_lock"
        app:showAsAction="never"/>


    <item android:id="@+id/action_lock"
        android:title="@string/menu_lock"
        android:icon="@android:drawable/ic_lock_lock"
        app:showAsAction="never"/>
</menu>
