<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences|textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDate"
                android:focusable="false"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etContent"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="top"
                android:hint="@string/content"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:maxLines="10"/>
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cbSecret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secret"
            android:layout_marginTop="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save"/>

    </LinearLayout>
</ScrollView>
